--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "electron": "~1.6.11",
     "electron-reload": "^1.2.1",
-    "sass-lint": "^1.10.2"
+    "sass-lint": "^1.10.2",
+    "webpack": "^3.0.0"
   }
 }
